--- a/Build-it/src/components/Header.css
+++ b/Build-it/src/components/Header.css
@@ -107,3 +107,7 @@
       border-radius: 100%;
     }
     
+    .Cart-length{
+      position: absolute;
+      transform:translateY(-10px);
+    }
