--- a/Build-it/src/components/profile.css
+++ b/Build-it/src/components/profile.css
@@ -14,42 +14,58 @@
 hr{
     width: 95%;
     height: 2px;
-    background-color: black;
-    margin-bottom:80px;
+    background-color: rgb(97, 93, 93);
+    margin-bottom:10px;
+    transform: translatey(-20px);
 }
-.Profiles-container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    margin-bottom: 100px;
-}
-.brand-profile{
-    margin: 100px;
+.Profiles-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Adjust as needed */
+    gap: 100px; /* Adjust the gap between items */
+    margin-bottom: 60px;
+    margin-left: 20px;
+    margin-top: 20px;
+  }
+  
+  .brand-profile {
     position: relative;
-    border-radius: 9%;
-    width: 210px;
-    height: 250px;
+    border-top-left-radius: 9%;
+    border-top-right-radius: 9%;
+    width: 210px; /* Adjust as needed */
+    height: 250px; /* Adjust as needed */
     background-color: #f9f9f9;
     overflow: hidden;
-    display: flex;
     align-items: center;
-    justify-content: center;
     margin-bottom: 20px;
-}
+    border: 1px solid rgb(55, 53, 53);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+  
 
 .brand-profile img{
     object-fit: cover;
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    max-width: 400px;
+    height: auto;
+    margin-bottom: 10px;
+}
+.profilenamecontainer{
+    height: 60px;
+    transform: translateY(-40px);
+    background-color: #000;
+    width: 212px;
+    border-bottom-left-radius: 30%;
+    border-bottom-right-radius: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.brand-profile p{
-    position: absolute;
-    bottom: 20px; /* Adjust position */
-    left: 50%;
-    transform: translateX(-50%);
-    text-align: center;
-    margin: 0; /* Remove default margin */
+.profilenamecontainer p{
+   color: white;
+    
 }
 
 .linking{
