--- a/Build-it/src/components/cart.css
+++ b/Build-it/src/components/cart.css
@@ -1,4 +1,5 @@
 .total-header{
+
     margin-left: 100px;
     background-color: black;
     color: white;
@@ -10,8 +11,9 @@
     border-radius: 30px 30px 0px 0px;
 }
 .carttotal-details{
+    font-size: 20px;
     margin-left: 100px;
-    width: 800px;
+    width: 1300px;
     height: 160px;
     transform: translateY(-20px);   
     border:1px solid #d6d6d6;
@@ -21,3 +23,18 @@
     align-items: center;
     justify-content: space-around;
 }
+.line{
+    width: 95%;
+}
+.checkout-button{
+    background-color:black ;
+    color: white;
+    padding: 10px 40px 10px 40px;
+    border-radius: 13px ;
+    font-weight: 600;
+    font-size: 20px;
+}
+.checkout-button:hover{
+    background-color: white;
+    color: black;
+    border: 1px solid black;}
