--- a/Build-it/src/components/cartitem.css
+++ b/Build-it/src/components/cartitem.css
@@ -1,14 +1,15 @@
 .item-container{
     margin-left: 50px;
     display: flex;
-    width: 800px;
-    height: 170px;
+    width: 1300px;
+    height: 130px;
     align-items: center;
     justify-content: space-around;
     background: #F5F5F5;
     border-radius: 30px;
     padding: 5px;
     border:1px solid #d6d6d6;
+    overflow: hidden;
 }
 
 .Qty-container{
@@ -25,4 +26,11 @@ button{
 li{
     list-style: none;
     padding: 10px;
+}
+.item-container img{
+    max-width: 100px;
+
+}
+i{
+    font-size: 35px;
 }
