--- a/Build-it/src/components/detail.css
+++ b/Build-it/src/components/detail.css
@@ -2,16 +2,34 @@
     font-family: inter;
     src: url(../Fonts/Inter-Regular.ttf);
 }
-
+.mainline{
+    width: 1350px;
+    margin-top: 40px;
+}
 .Maincontainer{
     display: flex;
     justify-content: left;
+    margin-top: 30px;
+}
+.detailscontainer{
+    transform: translateX(-80px);
+}
+.details{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+hr{
+    padding: 0.2px;
+    margin-top: 50px;
+    width: 520px;
 }
 
 .imagecontainer{
     display: flex;
     width: 541px;
-    height: 595px;
+    height: 300px;
     padding: 131px 105px;
     flex-direction: column;
     justify-content: center;
@@ -21,6 +39,10 @@
     border: 1px solid rgba(0, 0, 0, 0.10);
     margin-right: 15%;
 }
+img{
+    max-width: 100%;
+    max-height: 100%;
+}
 h1{
     color: #000;
     font-family: inter;
@@ -29,11 +51,12 @@ h1{
     font-weight: 800;
     line-height: normal;
     text-align: center;
+    transform: translateX(-50px);
 }
 .pricecontainer{
     display: flex;
     
-    justify-content: space-around;
+    justify-content: left;
     align-items: center;
 }
 .fprice{
@@ -45,6 +68,7 @@ font-weight: 700;
 line-height: normal;
 text-decoration:line-through;
 margin-right: 20px;
+
 }
 
 .oprice{
@@ -56,10 +80,19 @@ margin-right: 20px;
     line-height: normal;
 
 }
+.productdetails{
+    color: #000;
+    font-size: 20px;
+    font-weight: 600;
+    word-wrap: break-word;
+    font-family: inter;
+}
+
 .Cartfuntions{
     display: flex;
     justify-content: space-around;
     align-items: center;
+    width: fit-content;
 }
 
 .Qtycontainer{
